syntax = "proto3";

package posts;

option go_package = "posts/protogen/golang";


message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author_id = 3;
}

message CreatePostResponse {
    string post_id = 1;
}

message GetPostRequest {
    string post_id = 1;
}

message GetPostResponse {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string created_at = 5;
    repeated Comment comments = 6;
}

message GetPostsRequest {
    uint64 limit = 1;
    uint64 offset = 2;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

message Post {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string created_at = 5;
    repeated Comment comments = 6;
}

message DeletePostRequest {
    string post_id = 1;
    string author_id = 2;
}

message DeletePostResponse {
    string success_message = 1;
}


message UpdatePostRequest {
    string post_id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
};

message UpdatePostResponse {
    string success_message = 1;
}

// Комментарии к постам

message CreateCommentRequest {
    string text = 1;
    string post_id = 2;
    string author_id = 3;
}

message CreateCommentResponse {
    string comment_id = 1;
}

message GetCommentsRequest {
    string post_id = 1;
    uint64 limit = 2;
    uint64 offset = 3;
}

message GetCommentsResponse {
    repeated Comment comments = 1;
}

message Comment {
    string comment_id = 1;
    string text = 2;
    string author_id = 3;
    string created_at = 4;
}

message GetCommentRequest {
    string comment_id = 1;
    string post_id = 2;
    string author_id = 3;
}

message GetCommentResponse {
    Comment comment = 1;
}

message DeleteCommentRequest {
    string comment_id = 1;
    string post_id = 2;
    string author_id = 3;
}

message DeleteCommentResponse {
    string success_message = 1;
}

message UpdateCommentRequest {
    string comment_id = 1;
    string post_id = 2;
    string author_id = 3;
    string text = 4;
};

message UpdateCommentResponse {
    string success_message = 1;
}